[tool.poetry]
name = "bloxlink-lib"
version = "0.0.1"
description = "Shared utils used for the Python codebase of Bloxlink."
authors = ["Bloxlink <oss@blox.link>"]
readme = "README.md"
homepage = "https://blox.link/"
repository = "https://github.com/bloxlink/bot-models"
packages = [{include = "bloxlink_lib"}]


[tool.poetry.dependencies]
python = "<3.13, >=3.12"
attrs = "^23.2.0"
hikari = "<3.0.0, >=2.0.0.dev118"
motor = "^3.3.2"
redis = "^5.0.1"
python-dotenv = "^1.0.1"
requests = "^2.32.2"
python-dateutil = "^2.8.2"
pydantic = "^2.6.0"
discord-py = "^2.3.2"
sentry-sdk = "^1.40.5"
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"
pytest-env = "^1.1.3"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[tool.pytest_env]
BOT_RELEASE = "CANARY"
TEST_MODE = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
